# xkcd

./: .gitignore  LICENSE  readme.md  xkcd.cabal
src/: XKCD.hs  main.hs
