Name:             xkcd
Version:          0.1
Description:      Downloads the most recent xkcd comic into a folder on a disk
License:          BSD3
Author:           Róbert Selvek
Maintainer:       robert.selvek@gmail.com
Cabal-Version:    >= 1.2
Build-Type:       Simple
Executable xkcd
  Main-is:        main.hs
  Build-Depends:  base >= 4 && < 5, HTTP >= 4000.1.2, tagsoup >= 0.12.6, 
    bytestring >= 0.9, network >= 2.3, haskell98 >= 1.1
  Hs-Source-Dirs: src